--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -14,23 +14,23 @@
 			</div>
 			<div class="collapse navbar-collapse navbar-1">
 				<ul class="site-navigation nav">
-					<li>
-						<a [routerLink]="['/']">Home</a>
+					<li [ngClass]="{active: router.url==='/'}">
+						<a [routerLink]="['/']"><i class="fa fa-home" aria-hidden="true" style="font-size: 25px;"></i>Home</a>
 					</li>
-					<li>
-						<a [routerLink]="['/about']">About</a>
+					<li [ngClass]="{active: router.url==='/about'}">
+						<a [routerLink]="['/about']"><i class="fa fa-info" aria-hidden="true" style="font-size: 25px;"></i> About</a>
 					</li>
-					<li>
-						<a [routerLink]="['/services']">Services</a>
+					<li [ngClass]="{active: router.url==='/services'}">
+						<a [routerLink]="['/services']"><i class="fa fa-server" aria-hidden="true" style="font-size: 25px;"></i> Services</a>
 					</li>
-					<li>
-						<a [routerLink]="['/team']">Team</a>
+					<li [ngClass]="{active: router.url==='/team'}">
+						<a [routerLink]="['/team']"><i class="fa fa-users" aria-hidden="true" style="font-size: 25px;"></i> Team</a>
 					</li>
-					<li>
-						<a [routerLink]="['/kisan/login']">Login</a>
+					<li [ngClass]="{active: router.url==='/kisan/login'}">
+						<a [routerLink]="['/kisan/login']"><i class="fa fa-sign-in" aria-hidden="true" style="font-size: 25px;"></i> Login</a>
 					</li>
-					<li>
-						<a [routerLink]="['/kisan/register']">Register</a>
+					<li [ngClass]="{active: router.url==='/kisan/register'}">
+						<a [routerLink]="['/kisan/register']"><i class="fa fa-user-plus" aria-hidden="true" style="font-size: 25px;"></i> Register</a>
 					</li>
 				</ul>
 			</div>
