--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -63,9 +63,11 @@
   padding-right: 0px;
 }
 
-.site-navigation .nav > .active {
-  color: #333;
+.active{
+  border-radius: 10px;
+  border: solid black;
 }
+
 
 @media (max-width: 768px) {
   .bloc {
