--- a/src/styles.scss
+++ b/src/styles.scss
@@ -149,6 +149,10 @@ textarea{
   overflow: auto;
 }
 
+button[type="submit"]{
+  color: white;
+}
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
