--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -1,1 +1,132 @@
-<p>services works!</p>
+<div class="container">
+    <section>
+        <div class="section-container why-ola max-width">
+            <div class="w3-animate-zoom services">
+                <h2 class="section-heading">Why here?</h2>
+                <label class="section-sub-heading">
+                    These are the services you can avail on this platform
+                </label>
+            </div>
+            <div class="item-list-wrapper clearfix">
+                <div class="wd-50 w3-animate-left">
+
+                    <a class="indiv-item-list event-elem">
+                        <div class="wd-30">
+                            <div class="img-holder">
+                                <img src="../../../assets/images/pocket.jpg" />
+                            </div>
+                        </div>
+                        <div class="wd-70">
+                            <h4 class="heading">
+                                Pocket friendly
+                            </h4>
+                            <p class="info">
+                                Rent all the equipments you need at cheap and
+                                affordable rates
+                            </p>
+                        </div>
+                        <div class="clearfix"></div>
+                    </a>
+
+                    <a class="indiv-item-list event-elem">
+                        <div class="wd-30">
+                            <div class="img-holder">
+                                <img src="../../../assets/images/track.jpg" />
+                            </div>
+                        </div>
+                        <div class="wd-70">
+                            <h4 class="heading">
+                                Track status
+                            </h4>
+                            <p class="info">
+                                Track the status of whatever item you have
+                                purchased
+                            </p>
+                        </div>
+                        <div class="clearfix"></div>
+                    </a>
+
+                    <a class="indiv-item-list event-elem">
+                        <div class="wd-30">
+                            <div class="img-holder">
+                                <img
+                                    src="../../../assets/images/fertilizers.jpg" />
+                            </div>
+                        </div>
+                        <div class="wd-70">
+                            <h4 class="heading">
+                                Fertilizers and pesticides
+                            </h4>
+                            <p class="info">
+                                Purchase fertilizers and pesticides at a rate
+                                like never before
+                            </p>
+                        </div>
+                        <div class="clearfix"></div>
+                    </a>
+
+                </div>
+                <div class="wd-50 w3-animate-right">
+
+                    <a class="indiv-item-list event-elem">
+                        <div class="wd-30">
+                            <div class="img-holder">
+                                <img src="../../../assets/images/experts.jpg" />
+                            </div>
+                        </div>
+                        <div class="wd-70">
+                            <h4 class="heading">
+                                Tips and tricks
+                            </h4>
+                            <p class="info">
+                                Get important information about farming from
+                                some farminf experts
+                            </p>
+                        </div>
+                        <div class="clearfix"></div>
+                    </a>
+
+                    <a class="indiv-item-list event-elem">
+                        <div class="wd-30">
+                            <div class="img-holder">
+                                <img
+                                    src="../../../assets/images/forecasts.jpg" />
+                            </div>
+                        </div>
+                        <div class="wd-70">
+                            <h4 class="heading">
+                                Forecasts
+                            </h4>
+                            <p class="info">
+                                Be future ready and plan ahead with our daily
+                                and seasonal weather forecasts
+                            </p>
+                        </div>
+                        <div class="clearfix"></div>
+                    </a>
+
+                    <a class="indiv-item-list event-elem">
+                        <div class="wd-30">
+                            <div class="img-holder">
+                                <img
+                                    src="../../../assets/images/cashless.jpg" />
+                            </div>
+                        </div>
+                        <div class="wd-70">
+                            <h4 class="heading">
+                                Cashless purchases
+                            </h4>
+                            <p class="info">
+                                Now go cashless and make payments on the go by
+                                just a few finger taps
+                            </p>
+                        </div>
+                        <div class="clearfix"></div>
+                    </a>
+
+                </div>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+    </section>
+</div>
