--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -6,9 +6,8 @@
   margin-bottom: 0;
 }
 .navbar-brand {
-  font-size: 25px;
-  font-weight: bold;
-  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  font-size: 40px;
+  font-family: "Comic Sans MS", cursive, sans-serif;
   font-weight: 600;
 }
 .navbar-brand img {
