--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="bloc l-bloc w3-animate-top" id="nav-bloc">
+<div class="bloc l-bloc w3-animate-top bg-primary" id="nav-bloc">
 	<div class="container">
 		<nav class="navbar row">
 			<div class="navbar-header">
