--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="isLoading; else content" class="loader">
     <app-loader></app-loader>
-    <p>Please wait</p>
+    <p style="margin-top: 40px;">Please wait</p>
 </div>
 <ng-template #content>
     <div class="container w3-animate-zoom" style="width: 100%;">
