--- a/src/app/components/team/team.component.html
+++ b/src/app/components/team/team.component.html
@@ -1,1 +1,19 @@
-<p>team works!</p>
+<div class="container">
+    <div class="col-md-6 col-12">
+        message form
+    </div>
+    <div class="col-md-6 col-12">
+        <div class="col-md-6 col-12">
+            Utkarsh
+        </div>
+        <div class="col-md-6 col-12">
+            Rohan
+        </div>
+        <div class="col-md-6 col-12">
+            Shivam
+        </div>
+        <div class="col-md-6 col-12">
+            Abhishek
+        </div>
+    </div>
+</div>
