loader corrected and newsletter added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
+<app-loader></app-loader>
 <div class="my-container">
     <header>
         <app-header></app-header>
     </header>
     <main>
         <router-outlet></router-outlet>
+        <app-newsletter></app-newsletter>
     </main>
     <footer class="w3-animate-bottom">
         <app-footer></app-footer>
