--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper footer page-footer font-small purple pt-4 fixed-bottom">
+<!-- <div class="wrapper footer page-footer font-small purple pt-4 fixed-bottom">
     <div class="container">
         <div class="row">
             <div class="col-12 text">
@@ -20,5 +20,48 @@
                 Abhishek Singh
             </div>
         </div>
+    </div>
+</div> -->
+
+<div class="footer">
+    <div class="foot-left">
+        <div class="follow">
+            FOLLOW US
+        </div>
+        <div class="about-icons">
+            <ul>
+                <li><a href="https://www.facebook.com/"><i
+                            id="social-fb"
+                            class="fa fa-facebook-square fa-3x social"></i></a>
+                </li>
+                <li><a href="https://twitter.com/"><i id="social-tw"
+                            class="fa fa-twitter-square fa-3x social"></i></a>
+                </li>
+                <li> <a href="https://plus.google.com/"><i
+                            id="social-gp"
+                            class="fa fa-google-plus-square fa-3x social"></i></a>
+                </li>
+                <li> <a href="mailto:bootsnipp@gmail.com"><i
+                            id="social-em"
+                            class="fa fa-envelope-square fa-3x social"></i></a>
+                </li>
+            </ul>
+        </div>
+        <div class="copyright">
+            Site by &nbsp;<svg xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 25.1 62.8" style="height:18px;">
+                <title>Colony</title>
+                <g id="colony_c" data-name="colony_c">
+                    <g id="colony_c-2" data-name="Layer 2">
+                        <path class="colony-1"
+                            d="M25.1,0V23.1H16.7V8.4H8.3v46h8.4V39.7h8.4V62.8H0V0Z">
+                        </path>
+                    </g>
+                </g>
+            </svg>
+        </div>
+    </div>
+    <div class="foot-right">
+        <img src="../../../../assets/images/web-icon.ico" height="100px">
     </div>
 </div>
