--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,4 +1,4 @@
-.bloc{
+.bloc {
   padding: 20px 0px;
 }
 
@@ -66,11 +66,10 @@
   padding-right: 0px;
 }
 
-.active{
+.active {
   border-radius: 10px;
   border: solid black;
 }
-
 
 @media (max-width: 768px) {
   .bloc {
@@ -106,5 +105,17 @@
   .bloc-xl,
   .bloc-lg {
     padding: 40px 0;
+  }
+}
+
+@media (max-width: 475px) {
+  .navbar-brand {
+    font-size: 30px;
+  }
+}
+
+@media (max-width: 382px) {
+  .navbar-brand {
+    font-size: 23px;
   }
 }
