--- a/src/app/shared/components/loader/loader.component.html
+++ b/src/app/shared/components/loader/loader.component.html
@@ -1,4 +1,4 @@
-<div class="lds-roller">
+<!-- <div class="lds-roller">
     <div></div>
     <div></div>
     <div></div>
@@ -7,4 +7,6 @@
     <div></div>
     <div></div>
     <div></div>
-</div>
+</div> -->
+
+<div class="loading" *ngIf="loaderService.loader.show">Loading&#8230;</div>
