--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -15,22 +15,22 @@
 			<div class="collapse navbar-collapse navbar-1">
 				<ul class="site-navigation nav">
 					<li [ngClass]="{active: router.url==='/'}">
-						<a [routerLink]="['/']"><i class="fa fa-home" aria-hidden="true" style="font-size: 25px;"></i>Home</a>
+						<a [routerLink]="['/']" data-toggle="collapse" data-target=".navbar-1"><i class="fa fa-home" aria-hidden="true" style="font-size: 25px;"></i>Home</a>
 					</li>
 					<li [ngClass]="{active: router.url==='/about'}">
-						<a [routerLink]="['/about']"><i class="fa fa-info" aria-hidden="true" style="font-size: 25px;"></i> About</a>
+						<a [routerLink]="['/about']" data-toggle="collapse" data-target=".navbar-1"><i class="fa fa-info" aria-hidden="true" style="font-size: 25px;"></i> About</a>
 					</li>
 					<li [ngClass]="{active: router.url==='/services'}">
-						<a [routerLink]="['/services']"><i class="fa fa-server" aria-hidden="true" style="font-size: 25px;"></i> Services</a>
+						<a [routerLink]="['/services']" data-toggle="collapse" data-target=".navbar-1"><i class="fa fa-server" aria-hidden="true" style="font-size: 25px;"></i> Services</a>
 					</li>
 					<li [ngClass]="{active: router.url==='/team'}">
-						<a [routerLink]="['/team']"><i class="fa fa-users" aria-hidden="true" style="font-size: 25px;"></i> Team</a>
+						<a [routerLink]="['/team']" data-toggle="collapse" data-target=".navbar-1"><i class="fa fa-users" aria-hidden="true" style="font-size: 25px;"></i> Team</a>
 					</li>
 					<li [ngClass]="{active: router.url==='/kisan/login'}">
-						<a [routerLink]="['/kisan/login']"><i class="fa fa-sign-in" aria-hidden="true" style="font-size: 25px;"></i> Login</a>
+						<a [routerLink]="['/kisan/login']" data-toggle="collapse" data-target=".navbar-1"><i class="fa fa-sign-in" aria-hidden="true" style="font-size: 25px;"></i> Login</a>
 					</li>
 					<li [ngClass]="{active: router.url==='/kisan/register'}">
-						<a [routerLink]="['/kisan/register']"><i class="fa fa-user-plus" aria-hidden="true" style="font-size: 25px;"></i> Register</a>
+						<a [routerLink]="['/kisan/register']" data-toggle="collapse" data-target=".navbar-1"><i class="fa fa-user-plus" aria-hidden="true" style="font-size: 25px;"></i> Register</a>
 					</li>
 				</ul>
 			</div>
