--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,9 +1,6 @@
-.loader {
-  height: 300px;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  flex-direction: column;
+.row{
+  margin-left: -15px;
+  margin-right: -15px;
 }
 
 .header {
