--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -108,14 +108,14 @@
   }
 }
 
-@media (max-width: 475px) {
-  .navbar-brand {
-    font-size: 30px;
-  }
-}
+// @media (max-width: 475px) {
+//   .navbar-brand {
+//     font-size: 30px;
+//   }
+// }
 
-@media (max-width: 382px) {
-  .navbar-brand {
-    font-size: 23px;
-  }
-}
+// @media (max-width: 382px) {
+//   .navbar-brand {
+//     font-size: 23px;
+//   }
+// }
