--- a/src/app/shared/components/newsletter/newsletter.component.scss
+++ b/src/app/shared/components/newsletter/newsletter.component.scss
@@ -31,8 +31,14 @@ input {
 }
 
 input[type="email"] {
-  opacity: 0.2;
-  color: black;
+  background: transparent;
+  color: #fff;
+  border: none;
+  border-bottom: white solid 1px;
+}
+
+input[type="email"]::placeholder {
+  color: white;
 }
 
 input[type="submit"] {
@@ -50,5 +56,9 @@ input[type="submit"]:hover {
   .newsletter {
     flex-direction: column;
     align-items: center;
+  }
+
+  input[type="email"]{
+    margin-top: 30px;
   }
 }
