--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -66,7 +66,7 @@
             <div class="col-md-5 col-sm-6 w3-animate-left">
                 <div class="about-img">
                     <img src="../../../assets/images/about.jpg"
-                        alt="" style="width: 100%; height: auto;">
+                        alt="About us" style="width: 100%; height: auto;">
                 </div>
             </div>
         </div>
