--- a/src/app/shared/components/success-dialog/success-dialog.component.html
+++ b/src/app/shared/components/success-dialog/success-dialog.component.html
@@ -1,14 +1,16 @@
 <div class="mat-dialog-style">
     <div class="error-modal-icon">
-        <img src="assets/images/success@2x.png" alt="">
+        <img src="assets/images/success.png" alt="Success">
     </div>
     <div class="content-style" mat-dialog-content>
         <div class="error-content">
-            <p>message here</p>
+            <p>{{ message }}</p>
+            <hr *ngIf="detail">
+            <p *ngIf="detail">{{ detail }}</p>
         </div>
     </div>
     <mat-dialog-actions align="center" class="text-center">
-        <button mat-button (click)="close()"
-            class="btn btn-default-lg">Close</button>
+        <button mat-button (click)="onClose()"
+            class="btn btn-primary">Close</button>
     </mat-dialog-actions>
 </div>
