--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -22,7 +22,10 @@
         </div>
     </div>
 </div> -->
-
+<div class="lang" *ngIf="currentLang=='hi'" (click)="onLanguageChoose('en')">
+    Click to view in English</div>
+<div class="lang" *ngIf="currentLang=='en'" (click)="onLanguageChoose('hi')">
+    हिंदी में देखने के लिए क्लिक करें</div>
 <div class="footer">
     <div class="foot-left">
         <div class="follow">
@@ -30,19 +33,16 @@
         </div>
         <div class="about-icons">
             <ul>
-                <li><a href="https://www.facebook.com/"><i
-                            id="social-fb"
+                <li><a href="https://www.facebook.com/"><i id="social-fb"
                             class="fa fa-facebook-square fa-3x social"></i></a>
                 </li>
                 <li><a href="https://twitter.com/"><i id="social-tw"
                             class="fa fa-twitter-square fa-3x social"></i></a>
                 </li>
-                <li> <a href="https://plus.google.com/"><i
-                            id="social-gp"
+                <li> <a href="https://plus.google.com/"><i id="social-gp"
                             class="fa fa-google-plus-square fa-3x social"></i></a>
                 </li>
-                <li> <a href="mailto:bootsnipp@gmail.com"><i
-                            id="social-em"
+                <li> <a href="mailto:bootsnipp@gmail.com"><i id="social-em"
                             class="fa fa-envelope-square fa-3x social"></i></a>
                 </li>
             </ul>
