translation setup done in app module

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -3,8 +3,8 @@
         <div class="row">
             <div class="col-md-7 col-sm-6 w3-animate-right">
                 <div class="about-title clearfix">
-                    <h1>About <span>Us</span></h1>
-                    <h3>All there for our annapurnas </h3>
+                    <h1>{{'about.about' | translate}} <span>{{'about.us' | translate}}</span></h1>
+                    <h3>{{'about.annapurnas' | translate}} </h3>
                     <p class="about-paddingB">Agriculture is the backbone of the
                         Indian Economy"- said
                         Mahatma Gandhi six decades ago. Even today, the
