--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,61 +17,62 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="../assets/images/farmer3.jpg" alt="Third slide">
+                    <img src="../assets/images/farmer3.jpg" alt="First slide">
                     <!-- Static Header -->
                     <div class="header-text hidden-xs">
                         <div class="col-md-12 text-center">
                             <h2>
-                                <span>OUR VISION</span>
+                                <span>{{'home.ourVision' | translate}}</span>
                             </h2>
                             <br>
                             <div class="">
-                                <a class="btn btn-theme btn-sm btn-min-block">Get
-                                    Started</a></div>
+                                <a [routerLink]="['/kisan/login']"
+                                    class="btn btn-theme btn-sm btn-min-block">{{'home.getStarted' | translate}}</a></div>
                         </div>
                     </div><!-- /header-text -->
                 </div>
                 <div class="item">
-                    <img src="../assets/images/farmer1.jpg" alt="First slide">
+                    <img src="../assets/images/farmer1.jpg" alt="Second slide">
                     <!-- Static Header -->
                     <div class="header-text hidden-xs">
                         <div class="col-md-12 text-center">
                             <h2>
-                                <span>OUR VISION</span>
+                                <span>{{'home.ourVision' | translate}}</span>
                             </h2>
                             <br>
                             <div class="">
-                                <a class="btn btn-theme btn-sm btn-min-block">Get
-                                    Started</a></div>
+                                <a [routerLink]="['/kisan/login']"
+                                    class="btn btn-theme btn-sm btn-min-block">{{'home.getStarted' | translate}}</a></div>
                         </div>
                     </div><!-- /header-text -->
                 </div>
                 <div class="item">
-                    <img src="../assets/images/farmer2.jpg" alt="Second slide">
+                    <img src="../assets/images/farmer2.jpg" alt="Third slide">
                     <!-- Static Header -->
                     <div class="header-text hidden-xs">
                         <div class="col-md-12 text-center">
                             <h2>
-                                <span>OUR VISION</span>
+                                <span>{{'home.ourVision' | translate}}</span>
                             </h2>
                             <br>
                             <div class="">
-                                <a class="btn btn-theme btn-sm btn-min-block">Get
-                                    Started</a></div>
+                                <a [routerLink]="['/kisan/login']"
+                                    class="btn btn-theme btn-sm btn-min-block">{{'home.getStarted' | translate}}</a></div>
                         </div>
                     </div><!-- /header-text -->
                 </div>
                 <div class="item">
-                    <img src="../assets/images/farmer4.jpg" alt="Second slide">
+                    <img src="../assets/images/farmer4.jpg" alt="Fourth slide">
                     <!-- Static Header -->
                     <div class="header-text hidden-xs">
                         <div class="col-md-12 text-center">
                             <h2>
-                                <span>OUR VISION</span>
+                                <span>{{'home.ourVision' | translate}}</span>
                             </h2>
                             <br>
                             <div class="">
-                                <a class="btn btn-theme btn-sm btn-min-block">Get
+                                <a [routerLink]="['/kisan/login']"
+                                    class="btn btn-theme btn-sm btn-min-block">Get
                                     Started</a></div>
                         </div>
                     </div><!-- /header-text -->
