--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -2,9 +2,10 @@
     <section>
         <div class="section-container why-ola max-width">
             <div class="w3-animate-zoom services">
-                <h2 class="section-heading">Why here?</h2>
+                <h2 class="section-heading">{{'services.whyHere' | translate}}
+                </h2>
                 <label class="section-sub-heading">
-                    These are the services you can avail on this platform
+                    {{'services.servicesAvail' | translate}}
                 </label>
             </div>
             <div class="item-list-wrapper clearfix">
@@ -18,11 +19,10 @@
                         </div>
                         <div class="wd-70">
                             <h4 class="heading">
-                                Pocket friendly
+                                {{'services.pocketFriendly' | translate}}
                             </h4>
                             <p class="info">
-                                Rent all the equipments you need at cheap and
-                                affordable rates
+                                {{'services.rentEquipments' | translate}}
                             </p>
                         </div>
                         <div class="clearfix"></div>
@@ -36,11 +36,10 @@
                         </div>
                         <div class="wd-70">
                             <h4 class="heading">
-                                Track status
+                                {{'services.trackStatus' | translate}}
                             </h4>
                             <p class="info">
-                                Track the status of whatever item you have
-                                purchased
+                                {{'services.trackItem' | translate}}
                             </p>
                         </div>
                         <div class="clearfix"></div>
@@ -55,11 +54,10 @@
                         </div>
                         <div class="wd-70">
                             <h4 class="heading">
-                                Fertilizers and pesticides
+                                {{'services.fertAndPests' | translate}}
                             </h4>
                             <p class="info">
-                                Purchase fertilizers and pesticides at a rate
-                                like never before
+                                {{'services.purchasePests' | translate}}
                             </p>
                         </div>
                         <div class="clearfix"></div>
@@ -76,11 +74,10 @@
                         </div>
                         <div class="wd-70">
                             <h4 class="heading">
-                                Tips and tricks
+                                {{'services.tipsAndTricks' | translate}}
                             </h4>
                             <p class="info">
-                                Get important information about farming from
-                                some farminf experts
+                                {{'services.getImportantInfo' | translate}}
                             </p>
                         </div>
                         <div class="clearfix"></div>
@@ -95,11 +92,10 @@
                         </div>
                         <div class="wd-70">
                             <h4 class="heading">
-                                Forecasts
+                                {{'services.forecasts' | translate}}
                             </h4>
                             <p class="info">
-                                Be future ready and plan ahead with our daily
-                                and seasonal weather forecasts
+                                {{'services.futureReady' | translate}}
                             </p>
                         </div>
                         <div class="clearfix"></div>
@@ -114,11 +110,10 @@
                         </div>
                         <div class="wd-70">
                             <h4 class="heading">
-                                Cashless purchases
+                                {{'services.cashless' | translate}}
                             </h4>
                             <p class="info">
-                                Now go cashless and make payments on the go by
-                                just a few finger taps
+                                {{'services.goCashless' | translate}}
                             </p>
                         </div>
                         <div class="clearfix"></div>
